corrected contrast

--- a/css/index-small.css
+++ b/css/index-small.css
@@ -143,13 +143,13 @@ table, th, td {
 .header_color {
 	background-color: #F18F01;
 	font-family: Georgia, serif;
-	color: white;
+	color: black;
 }
 
 .header_sample {
 	background-color: #F18F01;
 	font-family: Georgia, serif;
-	color: white;
+	color: black;
 }
 
 .nav_color {
